[package]
name = "rispreter-repl"
version = "0.0.6"
authors = ["Marcos Frankowicz <marcosfrankowicz@gmail.com>"]
edition = "2018"

[dependencies]
linefeed = "0.5.4"
fnv = "1.0.6"
clap = { version = "2.32", features = ["yaml"] }
rispreter-parser= {path = "../rispreter-parser"}

[[bin]]
name = "rispreter"
